# jogo-da-forca-simples

./: .gitignore  CMakeLists.txt  README.md
data/: palavras.txt  score.txt
include/: body.h  guessgame.h  processfile.h  score.h
src/: guessgame.cpp  main.cpp  processfile.cpp  score.cpp
